Alignment fix

--- a/css/main.css
+++ b/css/main.css
@@ -281,7 +281,7 @@
     font-size: 22px;
     line-height: 26px;
     font-style: normal;
-    padding: 40px 0 20px 15px
+    padding: 40px 0 20px 25px
 }
 
 .hostings_main_card_list {
